--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "claude-ai": "^1.2.2",
     "cra-template": "1.2.0",
     "firebase": "^11.0.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.76.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -37,7 +40,12 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
     "react-router-dom": "^7.0.2",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   }
 }
